--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <button id="theme-toggle-btn">Toggle Theme</button>
         <h1>Lotto Number Generator</h1>
         <div id="lotto-numbers" class="lotto-numbers-container"></div>
         <button id="generate-btn">Generate Numbers</button>
