feat: Display a copyright-free image for recommended menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main>
             <section class="recommendation-section">
                 <div id="menu-recommendation" class="menu-recommendation"></div>
-                <img id="menu-image" src="https://via.placeholder.com/400x300.png?text=Dinner+Menu" alt="Recommended menu image">
+                <img id="menu-image" src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Recommended menu image">
                 <button id="recommend-btn">Get Recommendation</button>
             </section>
             <section class="contact-section">
