--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-7066264300961815">
-    <title>Dinner Menu Recommendation</title>
+    <meta name="description" content="오늘 저녁 뭐 먹지? 매일 고민되는 저녁 메뉴를 랜덤으로 추천받으세요. 치킨, 피자, 삼겹살 등 20가지 메뉴 중 하나를 추천해 드립니다.">
+    <meta name="keywords" content="저녁 메뉴 추천, 메뉴 추천, dinner menu, food recommendation, 오늘 저녁, 뭐 먹지">
+    <meta name="author" content="Dinner Menu Recommendation">
+    <meta property="og:title" content="저녁 메뉴 추천 - Dinner Menu Recommendation">
+    <meta property="og:description" content="오늘 저녁 뭐 먹지? 버튼 하나로 맛있는 저녁 메뉴를 추천받으세요!">
+    <meta property="og:type" content="website">
+    <title>오늘 저녁 메뉴 추천</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -94,6 +100,61 @@
                     </button>
                 </form>
             </section>
+
+            <!-- Food Tips Section -->
+            <section class="tips-section">
+                <h2 class="section-title">🍽️ 저녁 메뉴 선택 팁</h2>
+                <div class="tips-grid">
+                    <div class="tip-card">
+                        <span class="tip-icon">⏰</span>
+                        <h3>시간을 고려하세요</h3>
+                        <p>배달이 필요하다면 배달 시간을, 직접 요리한다면 조리 시간을 고려해서 메뉴를 선택하세요.</p>
+                    </div>
+                    <div class="tip-card">
+                        <span class="tip-icon">🌡️</span>
+                        <h3>날씨에 맞게</h3>
+                        <p>추운 날에는 따뜻한 국물 요리, 더운 날에는 시원한 샐러드나 냉면이 좋습니다.</p>
+                    </div>
+                    <div class="tip-card">
+                        <span class="tip-icon">👨‍👩‍👧‍👦</span>
+                        <h3>함께하는 사람</h3>
+                        <p>혼자 먹을 때와 가족이나 친구와 함께할 때 적합한 메뉴가 다릅니다.</p>
+                    </div>
+                    <div class="tip-card">
+                        <span class="tip-icon">💪</span>
+                        <h3>건강을 생각하세요</h3>
+                        <p>균형 잡힌 식단을 위해 채소와 단백질이 포함된 메뉴를 선택해 보세요.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- How to Use Section -->
+            <section class="how-to-section">
+                <h2 class="section-title">📖 이용 방법</h2>
+                <div class="steps-container">
+                    <div class="step">
+                        <div class="step-number">1</div>
+                        <div class="step-content">
+                            <h3>메뉴 추천받기 버튼 클릭</h3>
+                            <p>위의 "메뉴 추천받기" 버튼을 클릭하면 20가지 메뉴 중 하나가 무작위로 추천됩니다.</p>
+                        </div>
+                    </div>
+                    <div class="step">
+                        <div class="step-number">2</div>
+                        <div class="step-content">
+                            <h3>추천 메뉴 확인</h3>
+                            <p>화면에 표시되는 메뉴와 이미지를 확인하세요. 맛있어 보이나요?</p>
+                        </div>
+                    </div>
+                    <div class="step">
+                        <div class="step-number">3</div>
+                        <div class="step-content">
+                            <h3>마음에 안 들면 다시!</h3>
+                            <p>추천된 메뉴가 마음에 들지 않으면 버튼을 다시 클릭해서 새로운 메뉴를 추천받으세요.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- Ad Unit - Bottom -->
@@ -110,7 +171,16 @@
         </div>
 
         <footer>
-            <p>&copy; 2026 Dinner Menu Recommendation. All rights reserved.</p>
+            <div class="footer-content">
+                <div class="footer-links">
+                    <a href="about.html">서비스 소개 (About)</a>
+                    <span class="footer-divider">|</span>
+                    <a href="privacy.html">개인정보처리방침 (Privacy)</a>
+                    <span class="footer-divider">|</span>
+                    <a href="terms.html">이용약관 (Terms)</a>
+                </div>
+                <p>&copy; 2026 Dinner Menu Recommendation. All rights reserved.</p>
+            </div>
         </footer>
     </div>
     <script src="countryLanguageService.js"></script>
