--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Primary SEO Meta Tags -->
+<!-- 기본 SEO 메타 태그 -->
     <title>오늘 저녁 메뉴 추천 | 저녁 뭐 먹지? 랜덤 메뉴 추천기 - Dinner Menu Recommendation</title>
     <meta name="description" content="오늘 저녁 뭐 먹지? 매일 고민되는 저녁 메뉴를 랜덤으로 추천받으세요. 치킨, 피자, 삼겹살, 스테이크, 파스타 등 34가지 메뉴 중 하나를 추천해 드립니다. 18개 언어 지원, 70개국 이상에서 이용 가능.">
     <meta name="keywords" content="저녁 메뉴 추천, 오늘 저녁 뭐 먹지, 메뉴 추천, 랜덤 메뉴 추천, 저녁 식사 추천, dinner menu, food recommendation, what to eat, random food picker, 점심 메뉴 추천, 오늘 뭐 먹지">
     <meta name="author" content="Dinner Menu Recommendation">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
-    <!-- Canonical URL -->
+    <!-- 캐노니컬 URL -->
     <link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/">
 
-    <!-- Language & Locale -->
+    <!-- 언어 및 지역 -->
     <meta http-equiv="content-language" content="ko">
     <link rel="alternate" hreflang="ko" href="https://product-builder-lecture-8pr.pages.dev/">
     <link rel="alternate" hreflang="x-default" href="https://product-builder-lecture-8pr.pages.dev/">
 
-    <!-- Open Graph / Facebook -->
+    <!-- 오픈 그래프 / 페이스북 -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="저녁 메뉴 추천 - Dinner Menu Recommendation">
     <meta property="og:title" content="오늘 저녁 메뉴 추천 | 저녁 뭐 먹지?">
@@ -31,17 +31,17 @@
     <meta property="og:image:alt" content="저녁 메뉴 추천 - 오늘 저녁 뭐 먹지?">
     <meta property="og:locale" content="ko_KR">
 
-    <!-- Twitter Card -->
+    <!-- 트위터 카드 -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="오늘 저녁 메뉴 추천 | 저녁 뭐 먹지?">
     <meta name="twitter:description" content="오늘 저녁 뭐 먹지? 버튼 하나로 34가지 맛있는 저녁 메뉴를 랜덤 추천받으세요!">
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80">
     <meta name="twitter:image:alt" content="저녁 메뉴 추천 서비스">
 
-    <!-- Naver SEO -->
+    <!-- 네이버 SEO -->
     <meta name="naver-site-verification" content="naver-site-verification-code">
 
-    <!-- Favicon -->
+    <!-- 파비콘 -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon.svg">
@@ -339,6 +339,37 @@
                         <div class="slot-result-info">
                             <span class="slot-result-emoji" id="slot-result-emoji"></span>
                             <span class="slot-result-name" id="slot-result-name"></span>
+                        </div>
+                    </div>
+                    <!-- Share Buttons -->
+                    <div class="share-container" id="share-container">
+                        <p class="share-title" id="share-title">결과를 공유하세요!</p>
+                        <div class="share-buttons" id="share-buttons">
+                            <button class="share-btn share-native" id="share-native-btn" aria-label="Share" title="Share">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92z"/></svg>
+                                <span>공유하기</span>
+                            </button>
+                            <button class="share-btn share-twitter" id="share-twitter-btn" aria-label="Twitter/X" title="Twitter/X">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                            </button>
+                            <button class="share-btn share-facebook" id="share-facebook-btn" aria-label="Facebook" title="Facebook">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                            </button>
+                            <button class="share-btn share-whatsapp" id="share-whatsapp-btn" aria-label="WhatsApp" title="WhatsApp">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+                            </button>
+                            <button class="share-btn share-telegram" id="share-telegram-btn" aria-label="Telegram" title="Telegram">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.479.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/></svg>
+                            </button>
+                            <button class="share-btn share-line" id="share-line-btn" aria-label="LINE" title="LINE">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M19.365 9.864c.018 0 .049 0 .049.02 0-.02 0-.02-.05-.02zM24 10.201c0-4.571-4.585-8.29-10.22-8.29C8.144 1.911 3.56 5.63 3.56 10.2c0 4.068 3.606 7.48 8.472 8.124.33.071.779.218.893.5.102.257.067.66.033.92l-.143.862c-.044.259-.204 1.012.886.551 1.09-.46 5.882-3.466 8.025-5.932C23.36 13.414 24 11.878 24 10.201z"/></svg>
+                            </button>
+                            <button class="share-btn share-kakao" id="share-kakao-btn" aria-label="KakaoTalk" title="KakaoTalk">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 3c-5.52 0-10 3.58-10 8 0 2.84 1.88 5.32 4.72 6.73-.16.57-.59 2.07-.67 2.39-.11.4.14.39.3.29.12-.08 1.94-1.31 2.73-1.84.93.14 1.9.2 2.92.2 5.52 0 10-3.58 10-8s-4.48-8-10-8z"/></svg>
+                            </button>
+                            <button class="share-btn share-copy" id="share-copy-btn" aria-label="Copy Link" title="Copy Link">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
+                            </button>
                         </div>
                     </div>
                 </div>
