Add sidebar navigation panels

--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary SEO Meta Tags -->
-    <title>소개 - 저녁 메뉴 추천 서비스 | About Us - Dinner Menu Recommendation</title>
-    <meta name="description" content="저녁 메뉴 추천 서비스 소개. 34가지 메뉴, 18개 언어, 70개국 이상 지원. 매일 고민되는 저녁 메뉴를 랜덤으로 추천받는 무료 서비스입니다.">
+    <title>소개 - 메뉴 추천 서비스 | About Us - Menu Recommendation</title>
+    <meta name="description" content="메뉴 추천 서비스 소개. 34가지 메뉴, 18개 언어, 70개국 이상 지원. 매일 고민되는 메뉴를 랜덤으로 추천받는 무료 서비스입니다.">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
     <!-- Canonical URL -->
@@ -14,17 +14,17 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="저녁 메뉴 추천 - Dinner Menu Recommendation">
-    <meta property="og:title" content="소개 - 저녁 메뉴 추천 서비스">
-    <meta property="og:description" content="34가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 저녁 메뉴 추천 서비스를 소개합니다.">
+    <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation">
+    <meta property="og:title" content="소개 - 메뉴 추천 서비스">
+    <meta property="og:description" content="34가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스를 소개합니다.">
     <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/about.html">
     <meta property="og:image" content="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80">
     <meta property="og:locale" content="ko_KR">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="소개 - 저녁 메뉴 추천 서비스">
-    <meta name="twitter:description" content="34가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 저녁 메뉴 추천 서비스를 소개합니다.">
+    <meta name="twitter:title" content="소개 - 메뉴 추천 서비스">
+    <meta name="twitter:description" content="34가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스를 소개합니다.">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
@@ -68,15 +68,15 @@
     {
         "@context": "https://schema.org",
         "@type": "AboutPage",
-        "name": "저녁 메뉴 추천 서비스 소개",
-        "description": "34가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 저녁 메뉴 추천 서비스입니다.",
+        "name": "메뉴 추천 서비스 소개",
+        "description": "34가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스입니다.",
         "url": "https://product-builder-lecture-8pr.pages.dev/about.html",
         "datePublished": "2026-01-15",
         "dateModified": "2026-02-06",
         "mainEntity": {
             "@type": "WebApplication",
-            "name": "저녁 메뉴 추천",
-            "alternateName": "Dinner Menu Recommendation",
+            "name": "메뉴 추천",
+            "alternateName": "Menu Recommendation",
             "url": "https://product-builder-lecture-8pr.pages.dev/",
             "applicationCategory": "LifestyleApplication",
             "operatingSystem": "All",
@@ -88,7 +88,7 @@
         },
         "publisher": {
             "@type": "Organization",
-            "name": "Dinner Menu Recommendation",
+            "name": "Menu Recommendation",
             "url": "https://product-builder-lecture-8pr.pages.dev/"
         }
     }
@@ -99,10 +99,10 @@
     {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Dinner Menu Recommendation",
-        "alternateName": "저녁 메뉴 추천",
+        "name": "Menu Recommendation",
+        "alternateName": "메뉴 추천",
         "url": "https://product-builder-lecture-8pr.pages.dev/",
-        "description": "전 세계 사용자를 위한 무료 저녁 메뉴 추천 서비스를 제공합니다. 34가지 메뉴, 18개 언어 지원.",
+        "description": "전 세계 사용자를 위한 무료 메뉴 추천 서비스를 제공합니다. 34가지 메뉴, 18개 언어 지원.",
         "foundingDate": "2026"
     }
     </script>
