--- a/privacy.html
+++ b/privacy.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary SEO Meta Tags -->
-    <title>개인정보처리방침 - 저녁 메뉴 추천 | Privacy Policy - Dinner Menu Recommendation</title>
-    <meta name="description" content="저녁 메뉴 추천 서비스의 개인정보처리방침입니다. 수집하는 정보, 사용 목적, 보호 방법 등을 안내합니다.">
+    <title>개인정보처리방침 - 메뉴 추천 | Privacy Policy - Menu Recommendation</title>
+    <meta name="description" content="메뉴 추천 서비스의 개인정보처리방침입니다. 수집하는 정보, 사용 목적, 보호 방법 등을 안내합니다.">
     <meta name="robots" content="noindex, follow">
 
     <!-- Canonical URL -->
@@ -14,9 +14,9 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="저녁 메뉴 추천 - Dinner Menu Recommendation">
-    <meta property="og:title" content="개인정보처리방침 - 저녁 메뉴 추천">
-    <meta property="og:description" content="저녁 메뉴 추천 서비스의 개인정보처리방침입니다.">
+    <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation">
+    <meta property="og:title" content="개인정보처리방침 - 메뉴 추천">
+    <meta property="og:description" content="메뉴 추천 서비스의 개인정보처리방침입니다.">
     <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/privacy.html">
     <meta property="og:locale" content="ko_KR">
 
