--- a/terms.html
+++ b/terms.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary SEO Meta Tags -->
-    <title>이용약관 - 저녁 메뉴 추천 | Terms of Service - Dinner Menu Recommendation</title>
-    <meta name="description" content="저녁 메뉴 추천 서비스의 이용약관입니다. 서비스 이용 조건, 이용자 의무, 면책 사항 등을 안내합니다.">
+    <title>이용약관 - 메뉴 추천 | Terms of Service - Menu Recommendation</title>
+    <meta name="description" content="메뉴 추천 서비스의 이용약관입니다. 서비스 이용 조건, 이용자 의무, 면책 사항 등을 안내합니다.">
     <meta name="robots" content="noindex, follow">
 
     <!-- Canonical URL -->
@@ -14,9 +14,9 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="저녁 메뉴 추천 - Dinner Menu Recommendation">
-    <meta property="og:title" content="이용약관 - 저녁 메뉴 추천">
-    <meta property="og:description" content="저녁 메뉴 추천 서비스의 이용약관입니다.">
+    <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation">
+    <meta property="og:title" content="이용약관 - 메뉴 추천">
+    <meta property="og:description" content="메뉴 추천 서비스의 이용약관입니다.">
     <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/terms.html">
     <meta property="og:locale" content="ko_KR">
 
