--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>404 - 페이지를 찾을 수 없습니다 | Page Not Found</title>
-    <meta name="description" content="요청하신 페이지를 찾을 수 없습니다. 저녁 메뉴 추천 서비스 홈페이지로 이동해 주세요.">
+    <meta name="description" content="요청하신 페이지를 찾을 수 없습니다. 메뉴 추천 서비스 홈페이지로 이동해 주세요.">
     <meta name="robots" content="noindex, follow">
 
     <!-- Canonical URL -->
