--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
     <!-- Primary SEO Meta Tags -->
     <title>소개 - 메뉴 추천 서비스 | About Us - Menu Recommendation</title>
-    <meta name="description" content="메뉴 추천 서비스 소개. 100가지 메뉴, 18개 언어, 70개국 이상 지원. 매일 고민되는 메뉴를 랜덤으로 추천받는 무료 서비스입니다.">
+    <meta name="description" content="메뉴 추천 서비스 소개. 200가지 이상의 메뉴, 18개 언어, 70개국 이상 지원. 매일 고민되는 메뉴를 랜덤으로 추천받는 무료 서비스입니다.">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
     <!-- Canonical URL -->
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation">
     <meta property="og:title" content="소개 - 메뉴 추천 서비스">
-    <meta property="og:description" content="100가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스를 소개합니다.">
+    <meta property="og:description" content="200가지 이상의 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스를 소개합니다.">
     <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/about.html">
     <meta property="og:image" content="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80">
     <meta property="og:locale" content="ko_KR">
@@ -24,7 +24,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="소개 - 메뉴 추천 서비스">
-    <meta name="twitter:description" content="100가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스를 소개합니다.">
+    <meta name="twitter:description" content="200가지 이상의 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스를 소개합니다.">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
@@ -40,6 +40,8 @@
 
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-7066264300961815">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7066264300961815"
+     crossorigin="anonymous"></script>
 
     <!-- JSON-LD Structured Data: BreadcrumbList -->
     <script type="application/ld+json">
@@ -69,7 +71,7 @@
         "@context": "https://schema.org",
         "@type": "AboutPage",
         "name": "메뉴 추천 서비스 소개",
-        "description": "100가지 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스입니다.",
+        "description": "200가지 이상의 메뉴, 18개 언어, 70개국 이상 지원하는 무료 메뉴 추천 서비스입니다.",
         "url": "https://product-builder-lecture-8pr.pages.dev/about.html",
         "datePublished": "2026-01-15",
         "dateModified": "2026-02-09",
@@ -102,7 +104,7 @@
         "name": "Menu Recommendation",
         "alternateName": "메뉴 추천",
         "url": "https://product-builder-lecture-8pr.pages.dev/",
-        "description": "전 세계 사용자를 위한 무료 메뉴 추천 서비스를 제공합니다. 100가지 메뉴, 18개 언어 지원.",
+        "description": "전 세계 사용자를 위한 무료 메뉴 추천 서비스를 제공합니다. 200가지 이상의 메뉴, 18개 언어 지원.",
         "foundingDate": "2026"
     }
     </script>
@@ -158,7 +160,7 @@
             <article class="about-card">
                 <h2 id="about-intro-title">&#x1F3AF; 서비스 소개</h2>
                 <p id="about-intro-p1">"오늘 뭐 먹지?" - 매일 우리를 괴롭히는 질문입니다. 메뉴 추천 서비스는 이런 고민을 단 1초 만에 해결해 드립니다.</p>
-                <p id="about-intro-p2">버튼 하나만 클릭하면 엄선된 100가지 메뉴 중 하나를 무작위로 추천해 드립니다. 치킨, 피자, 삼겹살부터 파스타, 스테이크, 타코까지 다양한 메뉴가 준비되어 있습니다.</p>
+                <p id="about-intro-p2">버튼 하나만 클릭하면 엄선된 200가지 이상의 메뉴 중 하나를 무작위로 추천해 드립니다. 치킨, 피자, 삼겹살부터 파스타, 스테이크, 타코까지 다양한 메뉴가 준비되어 있습니다.</p>
                 <p id="about-intro-p3">더 이상 메뉴 선택으로 시간을 낭비하지 마세요. 저희가 선택을 도와드리겠습니다!</p>
             </article>
 
@@ -203,7 +205,7 @@
                 <h2 id="about-stats-title">&#x1F4CA; 서비스 현황</h2>
                 <div class="stats-grid">
                     <div class="stat-item">
-                        <div class="stat-number">100+</div>
+                        <div class="stat-number">200+</div>
                         <div class="stat-label" id="stat-menus">추천 메뉴</div>
                     </div>
                     <div class="stat-item">
@@ -259,6 +261,19 @@
             </article>
         </main>
         <a href="index.html" class="back-link" id="back-link" rel="noopener">&#x2190; 메인으로 돌아가기</a>
+
+        <footer style="margin-top: 40px; text-align: center;">
+            <nav style="display: flex; justify-content: center; gap: 16px; flex-wrap: wrap; padding: 20px 0;">
+                <a href="index.html" style="color: var(--text-secondary); text-decoration: none;">홈</a>
+                <span style="color: var(--text-secondary);">|</span>
+                <a href="guide.html" style="color: var(--text-secondary); text-decoration: none;">음식 가이드</a>
+                <span style="color: var(--text-secondary);">|</span>
+                <a href="privacy.html" style="color: var(--text-secondary); text-decoration: none;">개인정보처리방침</a>
+                <span style="color: var(--text-secondary);">|</span>
+                <a href="terms.html" style="color: var(--text-secondary); text-decoration: none;">이용약관</a>
+            </nav>
+            <p style="color: var(--text-secondary); font-size: 0.9rem;">&copy; 2026 Menu Recommendation. All rights reserved.</p>
+        </footer>
     </div>
     <script src="js/countryLanguageService.js"></script>
     <script src="js/translations.js"></script>
