--- a/terms.html
+++ b/terms.html
@@ -140,6 +140,19 @@
 
             <a href="index.html" class="back-link" id="back-link" rel="noopener">&#x2190; 메인으로 돌아가기</a>
         </article>
+
+        <footer style="margin-top: 40px; text-align: center;">
+            <nav style="display: flex; justify-content: center; gap: 16px; flex-wrap: wrap; padding: 20px 0;">
+                <a href="index.html" style="color: var(--text-secondary); text-decoration: none;">홈</a>
+                <span style="color: var(--text-secondary);">|</span>
+                <a href="about.html" style="color: var(--text-secondary); text-decoration: none;">소개</a>
+                <span style="color: var(--text-secondary);">|</span>
+                <a href="guide.html" style="color: var(--text-secondary); text-decoration: none;">음식 가이드</a>
+                <span style="color: var(--text-secondary);">|</span>
+                <a href="privacy.html" style="color: var(--text-secondary); text-decoration: none;">개인정보처리방침</a>
+            </nav>
+            <p style="color: var(--text-secondary); font-size: 0.9rem;">&copy; 2026 Menu Recommendation. All rights reserved.</p>
+        </footer>
     </div>
     <script src="js/countryLanguageService.js"></script>
     <script src="js/translations.js"></script>
