Reorganize HTML into pages and add JSON-LD build step

--- a/index.html
+++ b/index.html
@@ -66,205 +66,15 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7066264300961815"
      crossorigin="anonymous"></script>
 
-    <!-- JSON-LD Structured Data: WebSite -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "메뉴 추천 - Menu Recommendation",
-        "alternateName": ["오늘 뭐 먹지", "Menu Recommendation", "What to Eat"],
-        "url": "https://product-builder-lecture-8pr.pages.dev/",
-        "description": "오늘 뭐 먹지? 매일 고민되는 메뉴를 랜덤으로 추천받으세요. 200가지 이상의 메뉴 중 하나를 추천해 드립니다.",
-        "inLanguage": ["ko", "en", "ja", "zh", "es", "fr", "de", "pt", "it", "ru", "ar", "hi", "th", "vi", "id", "tr", "pl", "nl"],
-        "potentialAction": {
-            "@type": "SearchAction",
-            "target": "https://product-builder-lecture-8pr.pages.dev/?q={search_term_string}",
-            "query-input": "required name=search_term_string"
-        }
-    }
-    </script>
-
-    <!-- JSON-LD Structured Data: WebApplication -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebApplication",
-        "name": "메뉴 추천",
-        "alternateName": "Menu Recommendation",
-        "url": "https://product-builder-lecture-8pr.pages.dev/",
-        "description": "매일 고민되는 메뉴를 랜덤으로 추천받을 수 있는 무료 웹 애플리케이션입니다. 200가지 이상의 메뉴, 18개 언어 지원.",
-        "applicationCategory": "LifestyleApplication",
-        "operatingSystem": "All",
-        "browserRequirements": "Requires JavaScript",
-        "datePublished": "2026-01-15",
-        "dateModified": "2026-02-06",
-        "offers": {
-            "@type": "Offer",
-            "price": "0",
-            "priceCurrency": "KRW"
-        },
-        "featureList": ["랜덤 메뉴 추천", "슬롯머신 메뉴 선택", "200가지 이상의 메뉴", "18개 언어 지원", "70개국 이상 지원", "상황별 메뉴 추천", "계절/날씨별 메뉴", "다크모드 지원", "커뮤니티 게시판"],
-        "screenshot": "https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80",
-        "author": {
-            "@type": "Organization",
-            "name": "Menu Recommendation",
-            "url": "https://product-builder-lecture-8pr.pages.dev/"
-        }
-    }
-    </script>
-
-    <!-- JSON-LD Structured Data: Organization -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Menu Recommendation",
-        "alternateName": "메뉴 추천",
-        "url": "https://product-builder-lecture-8pr.pages.dev/",
-        "description": "전 세계 사용자를 위한 무료 메뉴 추천 서비스를 제공합니다.",
-        "foundingDate": "2026",
-        "sameAs": []
-    }
-    </script>
-
-    <!-- JSON-LD Structured Data: FAQPage -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "FAQPage",
-        "mainEntity": [
-            {
-                "@type": "Question",
-                "name": "오늘 뭐 먹지?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "메뉴 추천 서비스에서 '메뉴 추천받기' 버튼을 클릭하면 치킨, 피자, 삼겹살, 스테이크, 파스타 등 200가지 이상의 메뉴 중 하나를 랜덤으로 추천받을 수 있습니다."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "어떤 메뉴를 추천받을 수 있나요?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "한식(비빔밥, 잡채, 김치찌개, 떡볶이 등), 일식(초밥, 돈카츠, 우동, 라멘 등), 양식(스테이크, 파스타, 햄버거, 피자 등), 중식(짜장면, 짬뽕, 마라탕 등) 총 200가지 이상의 메뉴를 추천받을 수 있습니다."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "메뉴 추천은 무료인가요?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "네, 메뉴 추천 서비스는 완전히 무료이며, 24시간 언제든지 이용 가능합니다. 18개 언어를 지원하여 전 세계 어디서든 사용할 수 있습니다."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "메뉴 고를 때 팁이 있나요?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "배달 시간과 조리 시간을 고려하세요. 추운 날에는 따뜻한 국물 요리, 더운 날에는 시원한 샐러드나 냉면이 좋습니다. 함께 식사하는 사람에 따라 적합한 메뉴가 다르며, 균형 잡힌 식단을 위해 채소와 단백질이 포함된 메뉴를 선택하세요."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "비 오는 날 뭐 먹지?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "비 오는 날에는 파전, 칼국수, 수제비, 부침개, 해물전, 김치전 같은 따뜻한 전통 음식이 인기입니다. 막걸리나 동동주와 함께 먹으면 비 오는 날의 운치를 더할 수 있습니다."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "혼밥할 때 추천 메뉴는?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "혼자 먹을 때는 라멘, 김밥, 덮밥, 국수 같은 1인분 단위로 주문하기 쉬운 메뉴가 좋습니다. 간편하게 먹을 수 있으면서도 다양한 영양소를 섭취할 수 있는 메뉴를 선택하세요."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "다이어트 중 메뉴 추천해주세요",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "다이어트 중이라면 샐러드, 닭가슴살, 포케, 곤약 같은 저칼로리 고단백 메뉴를 추천합니다. 탄수화물을 줄이고 채소와 단백질 중심으로 식단을 구성하면 건강한 식사가 가능합니다."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "이 서비스는 어떤 언어를 지원하나요?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "한국어, 영어, 일본어, 중국어, 스페인어, 프랑스어, 독일어, 포르투갈어, 이탈리아어, 러시아어, 아랍어, 힌디어, 태국어, 베트남어, 인도네시아어, 터키어, 폴란드어, 네덜란드어 등 총 18개 언어를 지원합니다."
-                }
-            }
-        ]
-    }
-    </script>
-
-    <!-- JSON-LD Structured Data: HowTo -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "HowTo",
-        "name": "메뉴 추천받는 방법",
-        "description": "메뉴 추천 서비스를 사용하여 오늘 메뉴를 추천받는 방법입니다.",
-        "totalTime": "PT1M",
-        "step": [
-            {
-                "@type": "HowToStep",
-                "position": 1,
-                "name": "메뉴 추천받기 버튼 클릭",
-                "text": "위의 '메뉴 추천받기' 버튼을 클릭하면 200가지 이상의 메뉴 중 하나가 무작위로 추천됩니다."
-            },
-            {
-                "@type": "HowToStep",
-                "position": 2,
-                "name": "추천 메뉴 확인",
-                "text": "화면에 표시되는 메뉴와 이미지를 확인하세요."
-            },
-            {
-                "@type": "HowToStep",
-                "position": 3,
-                "name": "마음에 안 들면 다시 클릭",
-                "text": "추천된 메뉴가 마음에 들지 않으면 버튼을 다시 클릭해서 새로운 메뉴를 추천받으세요."
-            }
-        ]
-    }
-    </script>
-
-    <!-- JSON-LD Structured Data: BreadcrumbList -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-            {
-                "@type": "ListItem",
-                "position": 1,
-                "name": "홈",
-                "item": "https://product-builder-lecture-8pr.pages.dev/"
-            }
-        ]
-    }
-    </script>
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json" src="/js/ld/index.json"></script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KR2HW49NF0"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-KR2HW49NF0');
-    </script>
+    <script src="js/analytics/gtag.js"></script>
 
     <!-- Microsoft Clarity -->
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "vcn4lfwfx8");
-    </script>
+    <script src="js/analytics/clarity.js"></script>
 </head>
 <body>
     <div class="controls-bar">
@@ -404,7 +214,7 @@
                     </section>
 
                     <section class="panel" id="panel-bulletin" aria-labelledby="bulletin-title">
-                        <div class="panel-card" id="bulletin-container" data-include="bulletin.html"></div>
+                        <div class="panel-card" id="bulletin-container" data-include="pages/bulletin.html"></div>
                     </section>
 
                     <section class="panel" id="panel-contact" aria-labelledby="contact-title">
@@ -1128,13 +938,13 @@
         <footer>
             <nav class="footer-content" aria-label="사이트 하단 네비게이션">
                 <div class="footer-links">
-                    <a href="about.html" id="about-link">소개</a>
+                    <a href="pages/about.html" id="about-link">소개</a>
                     <span class="footer-divider" aria-hidden="true">|</span>
-                    <a href="guide.html" id="guide-link">음식 가이드</a>
+                    <a href="pages/guide.html" id="guide-link">음식 가이드</a>
                     <span class="footer-divider" aria-hidden="true">|</span>
-                    <a href="privacy.html" id="privacy-link">개인정보처리방침</a>
+                    <a href="pages/privacy.html" id="privacy-link">개인정보처리방침</a>
                     <span class="footer-divider" aria-hidden="true">|</span>
-                    <a href="terms.html" id="terms-link">이용약관</a>
+                    <a href="pages/terms.html" id="terms-link">이용약관</a>
                 </div>
                 <p>&copy; 2026 Menu Recommendation. All rights reserved.</p>
             </nav>
