--- a/404.html
+++ b/404.html
@@ -22,85 +22,8 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/404.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-
-    <style>
-        .error-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            text-align: center;
-            padding: 40px 20px;
-        }
-        .error-code {
-            font-size: 8rem;
-            font-weight: 900;
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color), var(--accent-color));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            line-height: 1;
-            margin-bottom: 16px;
-        }
-        .error-emoji {
-            font-size: 4rem;
-            margin-bottom: 20px;
-        }
-        .error-title {
-            font-size: 1.8rem;
-            font-weight: 700;
-            color: var(--text-color);
-            margin-bottom: 12px;
-        }
-        .error-desc {
-            font-size: 1.1rem;
-            color: var(--text-secondary);
-            max-width: 500px;
-            line-height: 1.8;
-            margin-bottom: 40px;
-        }
-        .error-links {
-            display: flex;
-            gap: 16px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .error-link {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            padding: 14px 28px;
-            border-radius: 14px;
-            text-decoration: none;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-        .error-link-primary {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: #fff;
-        }
-        .error-link-primary:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(99, 102, 241, 0.4);
-        }
-        .error-link-secondary {
-            background: var(--input-background);
-            color: var(--primary-color);
-            border: 1px solid var(--card-border);
-        }
-        .error-link-secondary:hover {
-            background: rgba(99, 102, 241, 0.15);
-            transform: translateY(-3px);
-        }
-        @media (max-width: 480px) {
-            .error-code { font-size: 5rem; }
-            .error-title { font-size: 1.4rem; }
-            .error-links { flex-direction: column; width: 100%; }
-            .error-link { justify-content: center; }
-        }
-    </style>
 </head>
 <body>
     <div class="error-container">
@@ -110,25 +33,9 @@
         <p class="error-desc" id="error-desc">요청하신 페이지가 존재하지 않거나 이동되었습니다. 아래 링크를 통해 원하시는 페이지로 이동해 주세요.</p>
         <div class="error-links">
             <a href="/" class="error-link error-link-primary" id="home-link">&#x1F3E0; 홈으로 가기</a>
-            <a href="/about.html" class="error-link error-link-secondary" id="about-link">&#x2139;&#xFE0F; 서비스 소개</a>
+            <a href="/pages/about.html" class="error-link error-link-secondary" id="about-link">&#x2139;&#xFE0F; 서비스 소개</a>
         </div>
     </div>
-    <script>
-        (function() {
-            var translations = {
-                Korean: { title: '페이지를 찾을 수 없습니다', desc: '요청하신 페이지가 존재하지 않거나 이동되었습니다. 아래 링크를 통해 원하시는 페이지로 이동해 주세요.', home: '\u{1F3E0} 홈으로 가기', about: '\u2139\uFE0F 서비스 소개' },
-                English: { title: 'Page Not Found', desc: 'The page you are looking for does not exist or has been moved. Please use the links below to navigate.', home: '\u{1F3E0} Go Home', about: '\u2139\uFE0F About Us' },
-                Japanese: { title: 'ページが見つかりません', desc: 'お探しのページは存在しないか、移動された可能性があります。以下のリンクからお進みください。', home: '\u{1F3E0} ホームへ', about: '\u2139\uFE0F サービス紹介' },
-                Chinese: { title: '页面未找到', desc: '您访问的页面不存在或已被移动。请使用以下链接导航。', home: '\u{1F3E0} 返回首页', about: '\u2139\uFE0F 关于我们' },
-                Spanish: { title: 'Página no encontrada', desc: 'La página que busca no existe o ha sido movida. Use los enlaces a continuación.', home: '\u{1F3E0} Ir al inicio', about: '\u2139\uFE0F Sobre nosotros' }
-            };
-            var lang = localStorage.getItem('selectedLanguage') || 'English';
-            var t = translations[lang] || translations['English'];
-            document.getElementById('error-title').textContent = t.title;
-            document.getElementById('error-desc').textContent = t.desc;
-            document.getElementById('home-link').innerHTML = t.home;
-            document.getElementById('about-link').innerHTML = t.about;
-        })();
-    </script>
+    <script src="js/404.js"></script>
 </body>
 </html>
