--- a/pages/guide.html
+++ b/pages/guide.html
@@ -11,14 +11,14 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/guide.html">
+    <link rel="canonical" href="https://product-builder-lecture-8pr.pages.dev/pages/guide.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="메뉴 추천 - Menu Recommendation">
     <meta property="og:title" content="음식 가이드 - 메뉴 선택 완벽 가이드">
     <meta property="og:description" content="상황별, 계절별, 건강 목표별 메뉴 선택 가이드. 완벽한 메뉴를 찾아보세요.">
-    <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/guide.html">
+    <meta property="og:url" content="https://product-builder-lecture-8pr.pages.dev/pages/guide.html">
     <meta property="og:image" content="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=1200&h=630&fit=crop&q=80">
     <meta property="og:locale" content="ko_KR">
 
@@ -36,7 +36,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/guide.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- Google AdSense -->
@@ -44,98 +45,15 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7066264300961815"
      crossorigin="anonymous"></script>
 
-    <!-- JSON-LD Structured Data: BreadcrumbList -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-            {
-                "@type": "ListItem",
-                "position": 1,
-                "name": "홈",
-                "item": "https://product-builder-lecture-8pr.pages.dev/"
-            },
-            {
-                "@type": "ListItem",
-                "position": 2,
-                "name": "음식 가이드",
-                "item": "https://product-builder-lecture-8pr.pages.dev/guide.html"
-            }
-        ]
-    }
-    </script>
-
-    <!-- JSON-LD: Article -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "메뉴 선택 완벽 가이드 - 상황별, 계절별, 건강 목표별 음식 추천",
-        "description": "매일 반복되는 메뉴 고민을 해결하기 위한 완벽한 가이드. 혼밥부터 데이트, 가족 식사까지 모든 상황에 맞는 메뉴를 찾아보세요.",
-        "author": {
-            "@type": "Organization",
-            "name": "Menu Recommendation"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "Menu Recommendation",
-            "url": "https://product-builder-lecture-8pr.pages.dev/"
-        },
-        "datePublished": "2026-02-09",
-        "dateModified": "2026-02-09"
-    }
-    </script>
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json" src="/js/ld/guide.json"></script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KR2HW49NF0"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-KR2HW49NF0');
-    </script>
+    <script src="/js/analytics/gtag.js"></script>
 
     <!-- Microsoft Clarity -->
-    <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "vcn4lfwfx8");
-    </script>
-
-    <style>
-        .guide-container { max-width: 1000px; margin: 0 auto; padding: 40px 20px; }
-        .guide-header { text-align: center; margin-top: 80px; margin-bottom: 50px; }
-        .guide-header h1 { font-size: 2.8rem; margin-bottom: 20px; background: linear-gradient(135deg, var(--primary-color), var(--secondary-color), var(--accent-color)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; }
-        .guide-header p { font-size: 1.15rem; color: var(--text-secondary); max-width: 700px; margin: 0 auto; line-height: 1.8; }
-        .guide-content { display: grid; gap: 30px; }
-        .guide-card { background: var(--card-background); backdrop-filter: blur(20px); border: 1px solid var(--card-border); border-radius: 24px; padding: 40px; box-shadow: 0 20px 60px var(--shadow-color); }
-        .guide-card h2 { font-size: 1.8rem; margin-bottom: 20px; color: var(--primary-color); }
-        .guide-card h3 { font-size: 1.3rem; margin-top: 24px; margin-bottom: 12px; color: var(--text-color); }
-        .guide-card p { line-height: 1.9; color: var(--text-secondary); margin-bottom: 16px; font-size: 1.02rem; }
-        .guide-card ul, .guide-card ol { padding-left: 24px; margin-bottom: 16px; }
-        .guide-card li { line-height: 1.8; color: var(--text-secondary); margin-bottom: 8px; }
-        .guide-card strong { color: var(--text-color); }
-        .guide-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 20px; }
-        .guide-item { background: var(--input-background); border-radius: 16px; padding: 24px; border: 1px solid var(--card-border); }
-        .guide-item h4 { font-size: 1.1rem; margin-bottom: 10px; color: var(--primary-color); }
-        .guide-item p { font-size: 0.95rem; margin: 0; }
-        .toc { background: var(--input-background); border: 1px solid var(--card-border); border-radius: 16px; padding: 24px; margin-bottom: 8px; }
-        .toc h3 { margin-top: 0; margin-bottom: 12px; color: var(--primary-color); }
-        .toc ol { padding-left: 24px; }
-        .toc a { color: var(--primary-color); text-decoration: none; }
-        .toc a:hover { text-decoration: underline; }
-        .back-link { display: inline-flex; align-items: center; gap: 8px; color: var(--primary-color); text-decoration: none; font-weight: 600; margin-top: 40px; padding: 12px 24px; background: var(--input-background); border-radius: 12px; transition: all 0.3s ease; }
-        .back-link:hover { background: rgba(99, 102, 241, 0.2); }
-        .ad-container { margin: 30px 0; text-align: center; min-height: 90px; }
-        @media (max-width: 768px) {
-            .guide-header h1 { font-size: 2rem; }
-            .guide-card { padding: 28px 20px; }
-            .guide-grid { grid-template-columns: 1fr; }
-        }
-    </style>
+    <script src="/js/analytics/clarity.js"></script>
 </head>
 <body>
     <div class="guide-container">
@@ -344,21 +262,21 @@
             <article class="guide-card" style="text-align: center;">
                 <h2>&#x1F3B2; 지금 바로 메뉴를 추천받아보세요!</h2>
                 <p style="margin-bottom: 24px;">더 이상 메뉴 선택으로 고민하지 마세요. 버튼 하나로 오늘의 완벽한 메뉴를 찾아보세요. 200가지 이상의 다양한 메뉴가 여러분을 기다리고 있습니다.</p>
-                <a href="index.html" style="display: inline-block; padding: 16px 40px; background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; text-decoration: none; border-radius: 16px; font-weight: 700; font-size: 1.1rem; transition: all 0.3s ease;">메뉴 추천받으러 가기 &rarr;</a>
+                <a href="/index.html" style="display: inline-block; padding: 16px 40px; background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; text-decoration: none; border-radius: 16px; font-weight: 700; font-size: 1.1rem; transition: all 0.3s ease;">메뉴 추천받으러 가기 &rarr;</a>
             </article>
         </main>
 
-        <a href="index.html" class="back-link" rel="noopener">&#x2190; 메인으로 돌아가기</a>
+        <a href="/index.html" class="back-link" rel="noopener">&#x2190; 메인으로 돌아가기</a>
 
         <footer style="margin-top: 40px; text-align: center;">
             <nav style="display: flex; justify-content: center; gap: 16px; flex-wrap: wrap; padding: 20px 0;">
-                <a href="index.html" style="color: var(--text-secondary); text-decoration: none;">홈</a>
+                <a href="/index.html" style="color: var(--text-secondary); text-decoration: none;">홈</a>
                 <span style="color: var(--text-secondary);">|</span>
-                <a href="about.html" style="color: var(--text-secondary); text-decoration: none;">소개</a>
+                <a href="/pages/about.html" style="color: var(--text-secondary); text-decoration: none;">소개</a>
                 <span style="color: var(--text-secondary);">|</span>
-                <a href="privacy.html" style="color: var(--text-secondary); text-decoration: none;">개인정보처리방침</a>
+                <a href="/pages/privacy.html" style="color: var(--text-secondary); text-decoration: none;">개인정보처리방침</a>
                 <span style="color: var(--text-secondary);">|</span>
-                <a href="terms.html" style="color: var(--text-secondary); text-decoration: none;">이용약관</a>
+                <a href="/pages/terms.html" style="color: var(--text-secondary); text-decoration: none;">이용약관</a>
             </nav>
             <p style="color: var(--text-secondary); font-size: 0.9rem;">&copy; 2026 Menu Recommendation. All rights reserved.</p>
         </footer>
