--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
             <!-- Footer: Language + Theme -->
             <div class="p-4 border-t border-gray-200 dark:border-gray-700 sidebar-footer">
                 <div id="sidebar-controls" class="flex items-center justify-between gap-2">
-                    <div class="controls-bar flex items-center gap-2 !static !inset-auto !z-auto w-full">
+                    <div class="flex items-center gap-2 w-full">
                         <div class="language-selector relative flex-1">
-                            <button id="language-btn" class="control-btn w-full flex items-center justify-between gap-2 px-3 py-2 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:text-primary transition-colors bg-transparent !static !inset-auto !z-auto" aria-label="언어 선택" aria-expanded="false" aria-haspopup="listbox">
+                            <button id="language-btn" class="control-btn w-full flex items-center justify-between gap-2 px-3 py-2 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:text-primary transition-colors bg-transparent" aria-label="언어 선택" aria-expanded="false" aria-haspopup="listbox">
                                 <span class="material-icons-outlined text-lg">language</span>
                                 <span id="selected-language" class="sidebar-text truncate max-w-[8rem]">English</span>
                                 <span class="arrow text-xs opacity-80 sidebar-text">▼</span>
@@ -324,10 +324,10 @@
                                 <div id="language-list" class="language-list mt-2 max-h-48 overflow-auto text-sm"></div>
                             </div>
                         </div>
-                        <button id="theme-toggle-btn" class="theme-toggle-switch group relative w-12 h-7 rounded-full bg-gray-200 dark:bg-indigo-600 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-primary/30 !static !inset-auto !z-auto" aria-label="테마 전환">
+                        <button id="theme-toggle-btn" class="theme-toggle-switch group relative w-12 h-7 rounded-full bg-gray-200 dark:bg-indigo-600 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-primary/30" aria-label="테마 전환">
                             <span class="absolute top-0.5 left-0.5 w-6 h-6 rounded-full bg-white shadow-md flex items-center justify-center transition-transform duration-300 dark:translate-x-5">
-                                <span class="material-icons-outlined text-amber-500 dark:text-indigo-200 dark:hidden" style="font-size:14px;font-family:'Material Icons Outlined'!important">light_mode</span>
-                                <span class="material-icons-outlined text-amber-500 dark:text-indigo-200 hidden dark:inline" style="font-size:14px;font-family:'Material Icons Outlined'!important">dark_mode</span>
+                                <span class="material-icons-outlined text-amber-500 dark:hidden" style="font-size:14px;font-family:'Material Icons Outlined'!important">light_mode</span>
+                                <span class="material-icons-outlined text-indigo-500 hidden dark:inline" style="font-size:14px;font-family:'Material Icons Outlined'!important">dark_mode</span>
                             </span>
                         </button>
                     </div>
@@ -430,8 +430,8 @@
                         </button>
                         <button class="theme-toggle-switch group relative w-12 h-7 rounded-full bg-gray-200 dark:bg-indigo-600 transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-primary/30" onclick="document.getElementById('theme-toggle-btn').click();" aria-label="테마 전환">
                             <span class="absolute top-0.5 left-0.5 w-6 h-6 rounded-full bg-white shadow-md flex items-center justify-center transition-transform duration-300 dark:translate-x-5">
-                                <span class="material-icons-outlined text-amber-500 dark:text-indigo-200 dark:hidden" style="font-size:14px;font-family:'Material Icons Outlined'!important">light_mode</span>
-                                <span class="material-icons-outlined text-amber-500 dark:text-indigo-200 hidden dark:inline" style="font-size:14px;font-family:'Material Icons Outlined'!important">dark_mode</span>
+                                <span class="material-icons-outlined text-amber-500 dark:hidden" style="font-size:14px;font-family:'Material Icons Outlined'!important">light_mode</span>
+                                <span class="material-icons-outlined text-indigo-500 hidden dark:inline" style="font-size:14px;font-family:'Material Icons Outlined'!important">dark_mode</span>
                             </span>
                         </button>
                     </div>
